Fix for bug 297262 - Gwenview crashes when reloading a .png that, when reloading, happens to be empty.

BUG: 297262
REVIEW: 107636
FIXED-IN: 4.10