lib/documentview/svgviewadapter.cpp
@@ -49,19 +49,22 @@ SvgImageView::SvgImageView(QGraphicsItem* parent)
 
 void SvgImageView::loadFromDocument()
 {
-    QSvgRenderer* renderer = document()->svgRenderer();
-    if (!renderer) {
-        kWarning() << "No SVG renderer. This should not happen!";
-        return;
+    Document::Ptr doc = document();
+    if (doc) {
+        QSvgRenderer* renderer = doc->svgRenderer();
+        if (!renderer) {
+            kWarning() << "No SVG renderer. This should not happen!";
+            return;
+        }
+        mSvgItem->setSharedRenderer(renderer);
+        if (zoomToFit()) {
+            setZoom(computeZoomToFit(), QPointF(-1, -1), ForceUpdate);
+        } else {
+            mSvgItem->setScale(zoom());
+        }
+        applyPendingScrollPos();
+        completed();
     }
-    mSvgItem->setSharedRenderer(renderer);
-    if (zoomToFit()) {
-        setZoom(computeZoomToFit(), QPointF(-1, -1), ForceUpdate);
-    } else {
-        mSvgItem->setScale(zoom());
-    }
-    applyPendingScrollPos();
-    completed();
 }
 
 void SvgImageView::onZoomChanged()
